--- a/BearSSL-OG/libbearssl.vcproj
+++ b/BearSSL-OG/libbearssl.vcproj
@@ -132,7 +132,25 @@
 				RelativePath=".\certificates.cpp">
 			</File>
 			<File
-				RelativePath=".\debug_utility.cpp">
+				RelativePath=".\debug_utility.c">
+				<FileConfiguration
+					Name="Debug|Xbox">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Xbox">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release_LTCG|Xbox">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\session_cache.cpp">
